# omega

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  LICENSE  Makefile  Pipfile  README.md  config.py  manage.py  setup.cfg
frontend/: package-lock.json  package.json
omega/: app.py  extensions.py  mutation.py  routes.py  schema.py
omega/commands/: __init__.py  celery.py  database.py  server.py  shell.py  watch.py
omega/model/: enums.py  user.py  watch.py
omega/task/: tasks.py  worker.py
omega/util/: class_tools.py  collection_tools.py  database_tools.py  flask_tools.py  functools.py  global_const.py  proxy_request.py  scrape_tools.py  watch.py
omega/util/proxy/: pool.py  request.py
omega/worker/: __init__.py  tasks.py
tests/: test_linters.py
