[metadata]
description-file = README.md

[flake8]
ignore = E203,E231,E402
max-line-length = 120
max-complexity = 10

[tool:pytest]
testpaths = tests

[isort]
default_section = THIRDPARTY
known_first_party = django

multi_line_output=3
force_grid_wrap=0
line_length=88
use_parentheses=True
combine_as_imports=true
include_trailing_comma=true
