[metadata]
description-file = README.md

[flake8]
ignore = E203,E231,E402,W503,E702
max-line-length = 120
max-complexity = 10

[tool:pytest]
testpaths = tests

[isort]
known_third_party = flask, sqlachemy, flask_script, flask_migrate, gevent, stringcase, price_parser, flask_bcrypt, flask_caching, flask_sqlalchemy, graphene, graphene_sqlalchemy, celery, requests, pycountry_convert

multi_line_output=3
force_grid_wrap=0
line_length=88
use_parentheses=True
combine_as_imports=true
include_trailing_comma=true
